@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.446 2005/10/27 01:25:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.447 2005/10/27 02:14:30 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
@@ -10,6 +10,8 @@
   properly check for bootloader emerge exist status with exitsuccess()
   log output of grub install command
   add --batch --no-floppy to grub command
+  src/GLIUtility.py:
+  update progress bar to 100% when process finishes
 
   25 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
